# mcp-hike-and-fly

./: .env.example  .gitignore  Makefile  README.md  nominatim_api.py  pyproject.toml  requests.txt  server.py  strava_api.py  strava_bs4.py
.cursor/: mcp.json
jiki/: host.py
src/: helpers.py  server.py
src/prompts/: location.py  segments.py
src/strava/: api.py  scraper.py  utils.py
src/tests/: test_number_of_climb_attempts_on_the_year.py
src/tools/: nominatim.py  strava.py
tests/: __init__.py  test_nominatim_tools.py  test_strava_tools.py
